--- a/src/pages/borrowers/add-borrower.f7.html
+++ b/src/pages/borrowers/add-borrower.f7.html
@@ -12,47 +12,97 @@
                         <form action="#" method="POST" onsubmit="${submitCreation}">
                             <div class="card-body">
                                 ${isSubmitSent && $h`
-                                <div class="form-group">
-                                    <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
-                                        ${returnMessage}
+                                    <div class="form-group">
+                                        <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
+                                            ${returnMessage}
+                                        </div>
                                     </div>
-                                </div>
                                 `}
                                 <div class="form-group">
-                                    <label for="accountName">Họ và tên</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                    <label for="input-name">Họ và tên</label>
+                                    <input type="text" class="form-control" id="input-name" name="account-name"
                                            placeholder="Nhập họ và tên..."/>
                                 </div>
                                 <div class="form-group">
-                                    <label for="select-class">Lớp</label>
-                                    <select class="form-control" name="account-role" id="select-class">
-                                        <option value="" selected>Chọn lớp...</option>
-                                        <option value="10ti">10 Tin</option>
-                                        <option value="11ti">11 Tin</option>
-                                        <option value="12ti">12 Tin</option>
-                                    </select>
+                                    <label for="input-class">Lớp</label>
+                                    <input type="text" class="form-control" id="input-class" name="account-name"
+                                           placeholder="Nhập lớp..."/>
                                 </div>
                                 <div class="form-group">
-                                    <label for="accountName">Mã học sinh</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                    <label for="input-student-code">Mã học sinh</label>
+                                    <input type="text" class="form-control" id="input-student-code" name="account-name"
                                            placeholder="Nhập mã học sinh..."/>
                                 </div>
                                 <div class="form-group">
-                                    <label for="accountName">Email</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
+                                    <label for="input-phone-number">Số điện thoại</label>
+                                    <input type="text" class="form-control" id="input-phone-number" name="account-name"
+                                           placeholder="Nhập số điện thoại..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-email">Email</label>
+                                    <input type="text" class="form-control" id="input-email" name="account-name"
                                            placeholder="Nhập email..."/>
                                 </div>
                                 <div class="form-group">
-                                    <label class="font-secondary" for="select-books">Sách mượn</label>
-                                    <input type="text" class="form-control" id="accountName" name="account-name"
-                                           placeholder="Nhập mã sách..."/>
+                                    <label class="font-secondary" for="input-book-code">Sách mượn</label>
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <input type="text" class="form-control" id="input-book-code"
+                                                   name="account-name"
+                                                   placeholder="Nhập mã sách..."/>
+                                        </div>
+                                        <div class="col-1">
+                                            <button @click="${findBook}" type="button"
+                                                    class="btn btn-success"
+                                                    data-id="1">
+                                                <i class="mdi mdi-magnify"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
+                                ${foundBook && alert && $h`
+                                    <div class="form-group">
+                                        <div class="table-responsive">
+                                            <table class="table table-hover ">
+                                                <thead>
+                                                <tr>
+                                                    <th>Tên sách</th>
+                                                    <th>Tác giả</th>
+                                                    <th>Mã sách</th>
+                                                    <th>Vị trí</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <td>${foundBook.name}</td>
+                                                    <td>${foundBook.author}</td>
+                                                    <td>${foundBook.code}</td>
+                                                    <td>${foundBook.location}</td>
+                                                    <td>
+                                                        <button @click="${() => {addBook(foundBook)}}" type="button"
+                                                                class="btn btn-success btn-sm"
+                                                                data-code="${foundBook.code}">
+                                                            <i class="mdi mdi-plus"></i>
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                `}
+                                ${!foundBook && alert && $h`
+                                    <div class="form-group">
+                                        <div class="alert alert-danger" role="alert">
+                                            Không tìm thấy sách
+                                        </div>
+                                    </div>
+                                `}
                                 <div class="form-group">
                                     <div class="table-responsive">
                                         <table class="table table-hover ">
                                             <thead>
                                             <tr>
-                                                <th>ID</th>
                                                 <th>Tên sách</th>
                                                 <th>Tác giả</th>
                                                 <th>Mã sách</th>
@@ -63,24 +113,24 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td>1</td>
-                                                <td>Còn chút gì để nhớ</td>
-                                                <td>Nguyễn Nhật Ánh</td>
-                                                <td>CBH-206</td>
-                                                <td>T1-N2</td>
-                                                <td>20/06/2021</td>
-                                                <td>27/06/2021</td>
-                                                <td>Bảo</td>
-                                                <td>
-                                                    <button @click="${deleteProject}" type="button"
-                                                            class="btn btn-danger btn-sm"
-                                                            data-toggle="modal" data-target="#deleteProject"
-                                                            data-id="1">
-                                                        <i class="mdi mdi-delete"></i>
-                                                    </button>
-                                                </td>
-                                            </tr>
+                                            ${pendingBorrowedBooks.map((book, i) => $h`
+                                                <tr>
+                                                    <td>${book.name}</td>
+                                                    <td>${book.author}</td>
+                                                    <td>${book.code}</td>
+                                                    <td>${book.location}</td>
+                                                    <td>${Clm.timeConverter(book.imported_time)}</td>
+                                                    <td>${Clm.timeConverter(book.imported_time + 1000 * 60 * 60 * 24 * 7)}</td>
+                                                    <td>${book.responsible_person}</td>
+                                                    <td>
+                                                        <button @click="${deletePendingBook}" type="button"
+                                                                class="btn btn-danger btn-sm"
+                                                                data-id="${i}">
+                                                            <i class="mdi mdi-delete"></i>
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                            `)}
                                             </tbody>
                                         </table>
                                     </div>
@@ -100,45 +150,55 @@
 </template>
 
 <script>
-	import Clm from "../../js/clm";
+    import Clm from "../../js/clm";
 
-	export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-		$on('pageBeforeIn', (e, page) => {
-			window.$(".js-select2").select2();
-			window.$('.datedropper').dateDropper();
-		});
+    export default function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
+        $on('pageBeforeIn', (e, page) => {
+            window.$(".js-select2").select2();
+            window.$('.datedropper').dateDropper();
+        });
 
-		let isSubmitSent = false;
-		let addSuccess = false;
-		let returnMessage = "";
-		let selectDate = "";
+        let isSubmitSent = false;
+        let addSuccess = false;
+        let returnMessage = "";
+        let alert = false;
+        let foundBook = null;
+        let pendingBorrowedBooks = [];
 
-		const submitCreation = function (e) {
-			e.preventDefault();
-			isSubmitSent = true;
-			let accountName = document.getElementById("accountName").value;
-			let accountEmail = document.getElementById("accountEmail").value;
-			let role = document.getElementById("role").value;
-			let password = Math.random().toString(36).slice(-8);
+        const submitCreation = function (e) {
+            e.preventDefault();
+            isSubmitSent = true;
 
-			if (!accountName || !accountEmail || !role) {
-				returnMessage = "Chưa điền đủ mục";
-			}
-			else {
-				Clm.api("create_account", {
-					fullname: accountName,
-					email: accountEmail,
-					password: password,
-					role: role
-				}).then(response => {
-					console.log(response);
-					addSuccess = response.status;
-					returnMessage = response.message;
+            const inputName = $('#input-name').val();
+            const inputClass = $('#input-class').val();
+            const inputStudentCode = $('#input-student-code').val();
+            const inputPhoneNumber = $('#input-phone-number').val();
+            const inputEmail = $('#input-email').val();
+        }
 
-					$update();
-				});
-			}
-		}
-		return $render;
-	}
+        const findBook = function (e) {
+            const bookCode = $('#input-book-code').val();
+            Clm.api("books/" + bookCode).then(response => {
+                console.log(response);
+                if (response.error) return Clm.alert(response.error);
+                foundBook = response.data['book_details'];
+                alert  = true;
+                $update();
+            });
+        }
+
+        const addBook = function (book) {
+            pendingBorrowedBooks.push(book);
+            foundBook = null;
+            alert = false;
+            $update();
+        }
+
+        const deletePendingBook = function (e) {
+            const bookId = e.currentTarget.dataset.id;
+            pendingBorrowedBooks.splice(bookId, 1);
+            $update();
+        }
+        return $render;
+    }
 </script>
