--- a/src/pages/borrowers/borrower-info.f7.html
+++ b/src/pages/borrowers/borrower-info.f7.html
@@ -1,172 +1,180 @@
 <template>
-  <div class="page">
-    <div class="page-content">
-      <section class="admin-content">
-        <div class="container py-5">
-          <div class="card m-b-30">
-            <div class="card-header">
-              <h5 class="m-b-0">
-                Thông tin người mượn
-              </h5>
-            </div>
-            <form action="#" method="POST" onsubmit="${submitCreation}">
-              <div class="card-body">
-                ${isSubmitSent && $h`
-                <div class="form-group">
-                  <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
-                    ${returnMessage}
-                  </div>
-                </div>
-                `}
-                <div class="form-group">
-                  <label for="input-name">Họ và tên</label>
-                  <input type="text" class="form-control" id="input-name" name="account-name"
-                         placeholder="Nhập họ và tên..." value="${borrowerInfo.name}"/>
-                </div>
-                <div class="form-group">
-                  <label for="input-class">Lớp</label>
-                  <input type="text" class="form-control" id="input-class" name="account-name"
-                         placeholder="Chọn lớp" value="${borrowerInfo.class}"/>
-                </div>
-                <div class="form-group">
-                  <label for="input-student-code">Mã học sinh</label>
-                  <input type="text" class="form-control" id="input-student-code" name="account-name"
-                         placeholder="Nhập mã học sinh..." value="${borrowerInfo.student_code}"/>
-                </div>
-                <div class="form-group">
-                  <label for="input-email">Email</label>
-                  <input type="text" class="form-control" id="input-email" name="account-name"
-                         placeholder="Nhập email..." value="${borrowerInfo.email}"/>
-                </div>
-                <div class="form-group">
-                  <label for="input-phone-number">Số điện thoại</label>
-                  <input type="text" class="form-control" id="input-phone-number" name="account-name"
-                         placeholder="Nhập số điện thoại..." value="${borrowerInfo.phone_number}"/>
-                </div>
-                <div class="form-group">
-                  <label for="input-book">Thêm sách</label>
-                  <input type="text" class="form-control" id="input-book" name="account-name"
-                         placeholder="Nhập mã sách..."/>
-                </div>
-                <div class="form-group">
-                  <label for="">Sách mượn</label>
-                  <div class="table-responsive">
-                    <table class="table table-hover ">
-                      <thead>
-                      <tr>
-                        <th>Tên sách</th>
-                        <th>Tác giả</th>
-                        <th>Mã sách</th>
-                        <th>Vị trí</th>
-                        <th>Ngày mượn</th>
-                        <th>Hết hạn</th>
-                        <th>Gia hạn</th>
-                        <th>Phụ trách</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      ${borrowedBooks.map(book => $h`
-                        <tr>
-                          <td>${book.name}</td>
-                          <td>${book.author}</td>
-                          <td>${book.code}</td>
-                          <td>${book.location}</td>
-                          <td>${book.borrowed_date}</td>
-                          <td>${book.expired_date}</td>
-                          <td>${book.extended_times}</td>
-                          <td>${book.responsible_person}</td>
-                          <td>
-                            <a href="/books/info/${book.code}/" class="btn btn-projects" role="button">
-                              <i class="mdi mdi-menu"></i>
-                            </a>
-                            <button @click="${deleteProject}" type="button"
-                                    class="btn btn-warning btn-sm"
-                                    data-toggle="modal" data-target="#deleteProject"
-                                    data-id="1">
-                              <i class="mdi mdi-update"></i>
-                            </button>
-                            <button @click="${deleteProject}" type="button"
-                                    class="btn btn-success btn-sm"
-                                    data-toggle="modal" data-target="#deleteProject"
-                                    data-id="1">
-                              <i class="mdi mdi-check"></i>
-                            </button>
+    <div class="page">
+        <div class="page-content">
+            <section class="admin-content">
+                <div class="container py-5">
+                    <div class="card m-b-30">
+                        <div class="card-header">
+                            <h5 class="m-b-0">
+                                Thông tin người mượn
+                            </h5>
+                        </div>
+                        <form action="#" method="POST" onsubmit="${submitCreation}">
+                            <div class="card-body">
+                                ${isSubmitSent && $h`
+                                <div class="form-group">
+                                    <div class="alert ${addSuccess?'alert-success':'alert-danger'}" role="alert">
+                                        ${returnMessage}
+                                    </div>
+                                </div>
+                                `}
+                                <div class="form-group">
+                                    <label for="input-name">Họ và tên</label>
+                                    <input type="text" class="form-control" id="input-name" name="account-name"
+                                           placeholder="Nhập họ và tên..." value="${borrowerInfo.name}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-class">Lớp</label>
+                                    <input type="text" class="form-control" id="input-class" name="account-name"
+                                           placeholder="Chọn lớp" value="${borrowerInfo.class}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-student-code">Mã học sinh</label>
+                                    <input type="text" class="form-control" id="input-student-code" name="account-name"
+                                           placeholder="Nhập mã học sinh..." value="${borrowerInfo.student_code}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-email">Email</label>
+                                    <input type="text" class="form-control" id="input-email" name="account-name"
+                                           placeholder="Nhập email..." value="${borrowerInfo.email}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-phone-number">Số điện thoại</label>
+                                    <input type="text" class="form-control" id="input-phone-number" name="account-name"
+                                           placeholder="Nhập số điện thoại..." value="${borrowerInfo.phone_number}"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-book">Thêm sách</label>
+                                    <input type="text" class="form-control" id="input-book" name="account-name"
+                                           placeholder="Nhập mã sách..."/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="">Sách mượn</label>
+                                    <div class="table-responsive">
+                                        <table class="table table-hover ">
+                                            <thead>
+                                            <tr>
+                                                <th>Tên sách</th>
+                                                <th>Tác giả</th>
+                                                <th>Mã sách</th>
+                                                <th>Vị trí</th>
+                                                <th>Ngày mượn</th>
+                                                <th>Hết hạn</th>
+                                                <th>Gia hạn</th>
+                                                <th>Phụ trách</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            ${borrowedBooks.map(book => $h`
+                                            <tr>
+                                                <td>${book.name}</td>
+                                                <td>${book.author}</td>
+                                                <td>${book.code}</td>
+                                                <td>${book.location}</td>
+                                                <td>${book.borrowed_date}</td>
+                                                <td>${book.expired_date}</td>
+                                                <td>${book.extended_times}</td>
+                                                <td>${book.responsible_person}</td>
+                                                <td>
+                                                    <a href="/books/info/${book.code}/" class="btn btn-projects"
+                                                       role="button">
+                                                        <i class="mdi mdi-menu"></i>
+                                                    </a>
+                                                    <button @click="${deleteProject}" type="button"
+                                                            class="btn btn-warning btn-sm"
+                                                            data-toggle="modal" data-target="#deleteProject"
+                                                            data-id="1">
+                                                        <i class="mdi mdi-update"></i>
+                                                    </button>
+                                                    <button @click="${deleteProject}" type="button"
+                                                            class="btn btn-success btn-sm"
+                                                            data-toggle="modal" data-target="#deleteProject"
+                                                            data-id="1">
+                                                        <i class="mdi mdi-check"></i>
+                                                    </button>
 
-                          </td>
-                        </tr>
-                      `)}
-                      </tbody>
-                    </table>
-                  </div>
+                                                </td>
+                                            </tr>
+                                            `)}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" name="create-project" value="ok" class="btn btn-success">
+                                        Trả sách
+                                    </button>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" name="create-project" value="ok" class="btn btn-success">
+                                        Cập nhật
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="form-group">
-                  <button type="submit" name="create-project" value="ok" class="btn btn-success">
-                    Trả sách
-                  </button>
-                </div>
-                <div class="form-group">
-                  <button type="submit" name="create-project" value="ok" class="btn btn-success">
-                    Cập nhật
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
+            </section>
         </div>
-      </section>
     </div>
-  </div>
 </template>
 
 <script>
-	import Clm from "../../js/clm";
+    import Clm from "../../js/clm";
 
-	export default async function (props, {$f7, $on, $update, $onBeforeMount, $onMounted, $onBeforeUnmount, $onUnmounted}) {
-		$on('pageBeforeIn', (e, page) => {
-			window.$(".js-select2").select2();
-			window.$('.datedropper').dateDropper();
-		});
+    export default async function (props, {
+        $f7,
+        $on,
+        $update,
+        $onBeforeMount,
+        $onMounted,
+        $onBeforeUnmount,
+        $onUnmounted
+    }) {
+        $on('pageBeforeIn', (e, page) => {
+            window.$(".js-select2").select2();
+            window.$('.datedropper').dateDropper();
+        });
 
-		let isSubmitSent = false;
-		let addSuccess = false;
-		let returnMessage = "";
-		let selectDate = "";
-		let borrowerInfo = {};
-		let borrowedBooks = [];
+        let isSubmitSent = false;
+        let addSuccess = false;
+        let returnMessage = "";
+        let selectDate = "";
+        let borrowerInfo = {};
+        let borrowedBooks = [];
 
-		Clm.api(`borrowers/${props.borrowerCode}/`).then(response => {
-			console.log(response);
-      borrowerInfo = response.data.borrower_info;
-      borrowedBooks = borrowerInfo.current_borrowed_books;
-      $update();
-    });
+        Clm.api(`borrowers/${props.borrowerCode}/`).then(response => {
+            console.log(response);
+            borrowerInfo = response.data.borrower_info;
+            borrowedBooks = borrowerInfo.current_borrowed_books;
+            $update();
+        });
 
-		const submitCreation = function (e) {
-			e.preventDefault();
-			isSubmitSent = true;
-			let accountName = document.getElementById("accountName").value;
-			let accountEmail = document.getElementById("accountEmail").value;
-			let role = document.getElementById("role").value;
-			let password = Math.random().toString(36).slice(-8);
+        const submitCreation = function (e) {
+            e.preventDefault();
+            isSubmitSent = true;
+            let accountName = document.getElementById("accountName").value;
+            let accountEmail = document.getElementById("accountEmail").value;
+            let role = document.getElementById("role").value;
+            let password = Math.random().toString(36).slice(-8);
 
-			if (!accountName || !accountEmail || !role) {
-				returnMessage = "Chưa điền đủ mục";
-			}
-			else {
-				Clm.api("create_account", {
-					fullname: accountName,
-					email: accountEmail,
-					password: password,
-					role: role
-				}).then(response => {
-					console.log(response);
-					addSuccess = response.status;
-					returnMessage = response.message;
+            if (!accountName || !accountEmail || !role) {
+                returnMessage = "Chưa điền đủ mục";
+            } else {
+                Clm.api("create_account", {
+                    fullname: accountName,
+                    email: accountEmail,
+                    password: password,
+                    role: role
+                }).then(response => {
+                    console.log(response);
+                    addSuccess = response.status;
+                    returnMessage = response.message;
 
-					$update();
-				});
-			}
-		}
-		return $render;
-	}
+                    $update();
+                });
+            }
+        }
+        return $render;
+    }
 </script>
