--- a/src/pages/borrowers/add-borrower.f7.html
+++ b/src/pages/borrowers/add-borrower.f7.html
@@ -190,12 +190,12 @@
                     addSuccess = !response.error;
 
                     if (addSuccess) {
-                        const borrowerId = response.data._id;
+                        const borrowerId = response.data.borrower._id;
 
                         for (let i = 0; i < pendingBorrowedBooks.length; i++) {
                             console.log(pendingBorrowedBooks[i]);
 
-                            response = await Clm.api('books/borrowing', {
+                            response = await Clm.api('books/' + pendingBorrowedBooks[i].code + '/borrowing', {
                                 bookId: pendingBorrowedBooks[i]._id,
                                 borrowedTime: new Date().getTime(),
                                 expiredTime: new Date().getTime() + 1000 * 60 * 60 * 24 * 7,
